# cs50x-intranet

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  TODO.py  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
document_templates/: development_body.txt  development_body_en.txt  development_body_ka.txt  foot.txt  foot_en.txt  foot_ka.txt  head.txt  head_en.txt  head_ka.txt  paid_maternity_body_en.txt  paid_maternity_body_ka.txt  paid_vacation_body_en.txt  paid_vacation_body_ka.txt  resignation_body.txt  resignation_body_en.txt  resignation_body_ka.txt  unpaid_vacation_body_en.txt  unpaid_vacation_body_ka.txt  vacation_body.txt  vacation_template.docx  vacation_template.txt
intranet/: alembic.py  app.py  error.py
intranet/core/: document.py  documents.py  news.py  user.py  user_details.py  user_documents.py  user_link.py
intranet/flask/: about_us.py  authorization.py  dependable.py  documents.py  index.py  meteo_api.py  news.py  user_details.py  user_documents.py  user_links.py
intranet/in_memory/: documents.py  news.py  user_links.py  users.py  users_details.py
intranet/mssql/: connector.py  documents.py  news.py  user_details.py  user_links.py  users.py
intranet/runner/: __main__.py  cli.py  factory.py  setup.py
intranet/sqlite/: authorization.py
intranet/templates/: layout.html  login.html  register.html
migrations/versions/: 21ffdb25e5bb_table_create_user_details.py  3155daf9a206_table_create_users.py  3d16fa7fab02_table_create_news.py  5655d1a6ea52_table_create_user_links.py  (+1 more)
tests/: fake.py  test_hello.py
(+25 files in other folders)
